cache before pulling

--- a/notebooks/download-aw-json.ipynb
+++ b/notebooks/download-aw-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "bc84b81c-7687-4f17-9e5d-13c0a39f7a7f",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,7 @@
     }
    ],
    "source": [
+    "# path for saving data\n",
     "dir_data = Path.cwd().parent / 'data'\n",
     "dir_raw = dir_data / 'raw'\n",
     "dir_raw_aw = dir_raw / 'american_whitewater'\n",
@@ -50,42 +51,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.basicConfig(level=\"INFO\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "987c1911-f3a3-4f44-b726-b3abf0de426e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not dir_raw_aw.exists():\n",
-    "    dir_raw_aw.mkdir(parents=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "17d4326c-37ff-4bf5-b666-d6dc849a02d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fail_count = 0\n",
-    "max_fail = 1000\n",
-    "max_range = 10000000"
+    "# configure logging\n",
+    "logger = logging.getLogger(__file__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b930c4-7cf3-4b0e-a807-0f17d098c3bc",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "a3e8e60e-7c9f-46ee-a15a-5fc5419af754",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# ensure the location to save data exists\n",
+    "if not dir_raw_aw.exists():\n",
+    "    dir_raw_aw.mkdir(parents=True)\n",
+    "\n",
+    "# variables for tracking progress\n",
+    "fail_count = 0\n",
+    "max_fail = 1000\n",
+    "max_range = 10000000\n",
+    "\n",
+    "# get a list of reaches already downloaded\n",
     "existing_reach_id_lst = [int(re.search(r\"aw_(\\d+)\\.json\", pth.name).group(1)) for pth in dir_raw_aw.glob('aw_*.json')]\n",
+    "\n",
+    "if len(existing_reach_id_lst):\n",
+    "    logging.info(f\"{len(existing_reach_id_lst):,} reaches have already been downlaoded to {dir_raw_aw}.\")\n",
     "\n",
     "for reach_id in range(1, max_range):\n",
     "\n",
@@ -224,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
