--- a/notebooks/Untitled 2.ipynb
+++ b/notebooks/Untitled 2.ipynb
@@ -6029,7 +6029,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
