--- a/notebooks/download-aw-json.ipynb
+++ b/notebooks/download-aw-json.ipynb
@@ -224,7 +224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
