--- a/notebooks/create-feature-service-points.ipynb
+++ b/notebooks/create-feature-service-points.ipynb
@@ -17,7 +17,10 @@
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "from reach_tools import Reach"
+    "from reach_tools import Reach\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -35,17 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bff336fb-181c-4698-a693-74a04e25e4ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "service_name = 'test_feature_service'\n",
-    "overwrite = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "36510a68-7881-48d8-88e7-afd70a07b767",
    "metadata": {},
    "outputs": [
@@ -55,7 +47,7 @@
      "text": [
       "Please sign in to your GIS and paste the code that is obtained below.\n",
       "If a web browser does not automatically open, please navigate to the URL below yourself instead.\n",
-      "Opening web browser to navigate to: https://adventure.maps.arcgis.com/sharing/rest/oauth2/authorize?response_type=code&client_id=2MonB9785a7oRJEl&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&state=WBwV6RbPyNe8PXcsgNcWD8OT8qoc5B&allow_verification=false\n"
+      "Opening web browser to navigate to: https://adventure.maps.arcgis.com/sharing/rest/oauth2/authorize?response_type=code&client_id=2MonB9785a7oRJEl&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&state=41k8zPlN2UVkvfbi5W418FNx5a76og&allow_verification=false\n"
      ]
     },
     {
@@ -74,7 +66,7 @@
        "GIS @ https://adventure.maps.arcgis.com version:2025.1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,6 +75,17 @@
     "gis = GIS(url, client_id=arcgis_client_id)\n",
     "\n",
     "gis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bff336fb-181c-4698-a693-74a04e25e4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service_name = 'river_reaches'\n",
+    "overwrite = True"
    ]
   },
   {
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "8249e9f2-9a60-43b7-b8d0-dadce6864112",
    "metadata": {},
    "outputs": [],
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "f1adbffe-3385-4063-86bc-8a61229f9f0c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "8af1f276-496f-41d4-ae77-5397e164b6c6",
    "metadata": {},
    "outputs": [],
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "64377455-9ac0-4dce-bc8e-ac509d225124",
    "metadata": {},
    "outputs": [],
@@ -203,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "957517bd-a9da-4fb2-9346-0b2da91cbb24",
+   "execution_count": 11,
+   "id": "87953a04-bd1c-4c40-a07d-76a49cd05039",
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +224,14 @@
     "\n",
     "if len(existing_lst) > 0 and overwrite:\n",
     "    gis.content.delete_items(existing_lst)\n",
+    "\n",
     "elif len(existing_lst) > 0:\n",
     "    raise FileExistsError(f'Service \"{service_name}\" already exists in the ArcGIS Online organization.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "id": "4702ecf4-deeb-46ed-8fdf-5ff6328f3fee",
    "metadata": {},
    "outputs": [],
@@ -238,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "id": "48de5583-e1b2-4571-9948-b4a5a450a2f9",
    "metadata": {},
    "outputs": [
@@ -247,26 +251,26 @@
       "text/html": [
        "<div class=\"item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
        "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
-       "                       <a href='https://adventure.maps.arcgis.com/home/item.html?id=46dee6ecd8b74f9e9ed9dd436061d97f' target='_blank'>\n",
+       "                       <a href='https://adventure.maps.arcgis.com/home/item.html?id=1b079f3db1634f51998c4642cdfa3ca8' target='_blank'>\n",
        "                        <img src='http://static.arcgis.com/images/desktopapp.png' class=\"itemThumbnail\">\n",
        "                       </a>\n",
        "                    </div>\n",
        "\n",
        "                    <div class=\"item_right\"     style=\"float: none; width: auto; overflow: hidden;\">\n",
-       "                        <a href='https://adventure.maps.arcgis.com/home/item.html?id=46dee6ecd8b74f9e9ed9dd436061d97f' target='_blank'><b>test_feature_service</b>\n",
+       "                        <a href='https://adventure.maps.arcgis.com/home/item.html?id=1b079f3db1634f51998c4642cdfa3ca8' target='_blank'><b>river_reaches</b>\n",
        "                        </a>\n",
        "                        <br/><br/><img src='https://adventure.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/featureshosted16.png' style=\"vertical-align:middle;\" width=16 height=16>Feature Layer Collection by jmccune_personal\n",
-       "                        <br/>Last Modified: May 12, 2025\n",
+       "                        <br/>Last Modified: May 13, 2025\n",
        "                        <br/>0 comments, 0 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
       ],
       "text/plain": [
-       "<Item title:\"test_feature_service\" type:Feature Layer Collection owner:jmccune_personal>"
+       "<Item title:\"river_reaches\" type:Feature Layer Collection owner:jmccune_personal>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,17 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "eb4f8f29-10de-49a3-8881-8be9b98649e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'success': True, 'layers': [{'name': 'test_feature_service', 'id': 0}]}"
+       "{'success': True, 'layers': [{'name': 'river_reaches', 'id': 0}]}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "e702bd46-2940-46c5-9a1f-0ec85447a64a",
    "metadata": {},
    "outputs": [],
@@ -313,45 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "31c88860-c55a-4742-b509-e2a481c2d7c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_feature_lst = [feat for feat in feature_lst if feat.get('attributes').get('river_name') is not None and 'tilton' in feat.get('attributes').get('river_name').lower()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "cf23a3fe-17b2-4a0d-9f74-274867aab03c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'addResults': [{'objectId': 1,\n",
-       "   'uniqueId': 1,\n",
-       "   'globalId': None,\n",
-       "   'success': True},\n",
-       "  {'objectId': 2, 'uniqueId': 2, 'globalId': None, 'success': True},\n",
-       "  {'objectId': 3, 'uniqueId': 3, 'globalId': None, 'success': True}],\n",
-       " 'updateResults': [],\n",
-       " 'deleteResults': []}"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lyr.edit_features(adds=test_feature_lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "e74152d9-1376-4529-8d6b-686ca81f98ec",
    "metadata": {},
    "outputs": [],
@@ -362,22 +328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c6f6588b-9cbd-40d8-ac7c-ae1d011b5907",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chnk = upload_chunks[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "93f8dab4-114c-44a5-a0da-89d8b633feac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1f1bacef6704898ab9be4d65701c0f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/26 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "for chnk in upload_chunks:\n",
+    "for chnk in tqdm(upload_chunks):\n",
     "    lyr.edit_features(adds=chnk)"
    ]
   },
@@ -406,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
